--- a/index.html
+++ b/index.html
@@ -1,65 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Web</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" href="img/SE.png">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="icon" href="img/SE.png" />
+  </head>
+  <body>
     <div class="container">
-        <!-- row -->
-        <div class="row">
-            <div class="col-lg-1">
-                8.33%
-            </div>
-            <div class="col-lg-2">
-               16.66%
-            </div>
+      <!-- row -->
+      <div class="row">
+        <div class="col-lg-1 col-sm-4">8.33%</div>
+        <div class="col-lg-2 col-sm-4">16.66%</div>
+      </div>
+      <!-- row 2 -->
+      <div class="row">
+        <div class="col-lg-6 col-sm-6">50%</div>
+        <div class="col-lg-6 col-sm-6">50%</div>
+      </div>
+      <!-- row 3 -->
+      <div class="row">
+        <div class="col-lg-3 col-sm-6">
+          <h1>Si paling bingung</h1>
+          <img src="img/wdym.jfif" alt="" class="img rounded-circle" />
         </div>
-        <!-- row 2 -->
-        <div class="row">
-            <div class="col-lg-6">
-                50%
-            </div>
-            <div class="col-lg-6">
-                50%
-            </div>
+        <div class="col-lg-3 col-sm-6">
+          <h1>Si paling hebat</h1>
+          <img src="img/kucing oyen.jpg" alt="" class="img rounded-circle" />
         </div>
-        <!-- row 3 -->
-        <div class="row">
-            <div class="col-lg-3">
-                <h1>Si paling bingung</h1>
-                <img src="img/wdym.jfif" alt="" class="img rounded-circle">
-            </div>
-            <div class="col-lg-3">
-                <h1>Si paling hebat</h1>
-                <img src="img/kucing oyen.jpg" alt="" class="img rounded-circle">
-            </div>
-            <div class="col-lg-3">
-                <h1>Si paling maboks</h1>
-                <img src="img/mabok ges.webp" alt="" class="img rounded-circle">
-            </div>
-            <div class="col-lg-3">
-                <h1>si paling paling</h1>
-                <img src="img/uwaw.jfif" alt="" class="img rounded-circle">
-            </div>
+        <div class="col-lg-3 col-sm-6">
+          <h1>Si paling maboks</h1>
+          <img src="img/mabok ges.webp" alt="" class="img rounded-circle" />
         </div>
+        <div class="col-lg-3 col-sm-6">
+          <h1>si paling paling</h1>
+          <img src="img/uwaw.jfif" alt="" class="img rounded-circle" />
+        </div>
+      </div>
     </div>
     <!-- row 4 -->
     <div class="row">
-        <div class="col-lg-6 p5">
-            <img src="img/computer.png" alt="" class="img">
-        </div>
-        <div class="col-lg-3 p5">
-            <img src="img/adm.png" alt="" class="img">
-        </div>
-        <div class="col-lg-3 p5">
-            <img src="img/SE.png" alt="" class="img">
-        </div>
+      <div class="col-lg-6 p5 col-sm-6">
+        <img src="img/computer.png" alt="" class="img" />
+      </div>
+      <div class="col-lg-3 p5 col-sm-6">
+        <img src="img/adm.png" alt="" class="img" />
+      </div>
+      <div class="col-lg-3 p5 col-sm-6">
+        <img src="img/SE.png" alt="" class="img" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
